File: plugins/nexus-default-role-plugin/pom.xml